--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.0",
+    "babel-preset-expo": "~54.0.9",
     "expo": "~54.0.0",
-    "expo-location": "~18.1.6",
+    "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.0",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-webview": "13.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "eas-cli": "^16.28.0"
+    "@babel/core": "^7.26.0"
   }
 }
