--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
     "scheme": "asimos",
     "version": "0.2.0",
     "orientation": "portrait",
-    "icon": "./assets/logo.png",
+    "icon": "./assets/logo.jpeg",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/logo.png",
+      "image": "./assets/logo.jpeg",
       "resizeMode": "contain",
       "backgroundColor": "#F6F7FB"
     },
@@ -25,8 +25,9 @@
       }
     },
     "android": {
+      "softwareKeyboardLayoutMode": "resize",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo.png",
+        "foregroundImage": "./assets/logo.jpeg",
         "backgroundColor": "#F5F6F8"
       },
       "permissions": [
@@ -41,7 +42,7 @@
       "expo-notifications"
     ],
     "web": {
-      "favicon": "./assets/logo.png"
+      "favicon": "./assets/logo.jpeg"
     },
     "extra": {
       "eas": {
