--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "expo-location": "~18.1.6",
     "expo-notifications": "~0.32.0",
-    "expo-device": "~7.0.1"
+    "expo-device": "~7.0.1",
+    "expo-constants": "~18.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
