--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation "androidx.appcompat:appcompat:1.7.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
