--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -35,7 +35,7 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=true
+newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
@@ -63,3 +63,9 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+
+MYAPP_UPLOAD_STORE_FILE=upload-keystore.jks
+MYAPP_UPLOAD_STORE_PASSWORD=Asimos#2026!Key
+MYAPP_UPLOAD_KEY_ALIAS=upload
+MYAPP_UPLOAD_KEY_PASSWORD=Asimos#2026!Key
