--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.18",
@@ -27,10 +28,10 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "babel-preset-expo": "^13.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "babel-preset-expo": "^13.2.3"
+    "@babel/core": "^7.26.0"
   }
 }
